# hikvision-mvs-sys

./: Cargo.toml  build.rs
examples/: load_and_save.rs  save_image.rs
src/: lib.rs
